/* lITEsqL - Documentation - Changes
 * 
 * By Tero Laitinen 
 * 
 * See LICENSE for copyright information. */

/* \file changes.txt
    Manual */
/** \page changes Changes

\section vercvs CVS Version

2006 March 29
- bug fix: litesql-gen wrote broken CREATE INDEX-statement, bug 1456468. (by Anonymous)

2006 March 5:
- ToDo-list updated.

2006 February 28:
- bug fix: litesql-gen wrote unknown Neq - Expr in stead of NotEq.
- bug fix: localtime_r replacement provided (by Axel Schmidt)

2006 February 15:
- feature: const-attribute for methods 
- bug fix: litesql-gen writes const methods for relation handles

2006 February 4:
- feature: stronger type checking for expressions and field types, select<Person>(db, Role::Id == 1).one() does not compile now.
- feature: Makefile.am, Makefile.in files to debian-subdir (Debian packaging headers)

2006 February 1:
- bug fix: sqlite3-backend had a concurrency bug (fixed by F.Javier Noguera)

\section ver0_3_2 Version 0.3.2
2006 January 25:
- feature: static FieldType-objects for subclasses' id fields are now named Class::Own::Id so that they can be used in template methods
- bug fix: litesql-gen compiles again with g++ 4.0 (explicit template specialization was missing)

2006 January 21:
- feature: litesql-gen writes static FieldType - objects for subclasses' id fields
- bug fix: litesql-gen wrote broken RelationHandle::del - method. It deleted all rows.
- bug fix: SQLite3-backend transaction reset not needed in case of an error

2006 January 20:
- bug fix: Date-, DateTime- and Time-fields were broken. 
- bug fix: litesql-gen wrote invalid default values for Date-, DateTime and Time-fields. 
- bug fix: litesql-gen did not reset fields' modified flags when assigning record to object

2006 January 19:
- bug fix: MySQL 5 does not like names like 'schema' and 'sql'. Internal table is now named to 'schema_' and fields are postfixed with an underscore. This breaks compatibility with databases created with previous versions. 
